# Rust-For-ESP32

./: LICENSE  README.md
other/: export-esp.sh  install.sh
rust4-esp32/: Cargo.toml
stdsense/: Cargo.toml
stdsense/src/: main.rs
