[package]
name = "rust4_esp32"
version = "0.1.0"
authors = ["hiltar <43303122+hiltar@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32-hal = "0.5.0"


esp-backtrace = { version = "0.2.0", features = ["esp32", "panic-handler", "print-uart"] }

xtensa-lx-rt = { version = "0.13.0", features = ["esp32"], optional = true }

[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]
